...
  machine: 'Máquina',
  cable: 'Cabo',
  bodyweight: 'Peso Corporal',
  smithMachine: 'Smith',
  kettlebell: 'Kettlebell',
  resistanceBand: 'Elástico',
  weightPlate: 'Anilha',
  suspensionTrainer: 'Suspensão',
  other: 'Outro',
  ezCurlBar: 'Barra W',
  treadmill: 'Esteira',
  stationaryBike: 'Bicicleta Ergométrica',
  rowingMachine: 'Remador',
...
