export default {
  home: 'Início',
  workouts: 'Treinos',
  reports: 'Relatórios',
  settings: 'Config.',
};
