export default {
  home: 'Home',
  workouts: 'Workouts',
  reports: 'Reports',
  settings: 'Settings',
};
