export default {
  title: 'Configurações',
  profile: 'Perfil',
  themeLabel: 'Tema',
  languageLabel: 'Idioma',
  notifications: 'Notificações',
  preferences: 'Preferências',
  privacy: 'Privacidade',
  subscription: 'Assinatura',
  signOut: 'Sair',
  signOutError: 'Erro ao sair',
};
