...
          onRefresh={() => {
            onRefresh?.();
            refetch();
          }}
        />
      }
      testID="workout-log-list"
    />
  );
}

